--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.5"
+    "@algolia/autocomplete-js": "^1.19.0",
+    "@astrojs/react": "^4.2.5",
+    "astro": "^5.7.5",
+    "dotenv": "^16.5.0",
+    "instantsearch.js": "^4.78.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "typesense": "^2.0.3",
+    "typesense-instantsearch-adapter": "^2.9.0"
   }
 }
